--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,14 @@
 *.war
 *.nar
 *.ear
-*.zip
 *.tar.gz
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
-/.settings
+target/
+.settings/
+.project
+.classpath
+
 
